--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a href="#" class="navbar-brand">PsBennyWood</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu01"
         aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="container">
         <ul class="nav justify-content-right d-flex">
-          <a href="#" class="navbar-brand">PsBennyWood</a>
           <div class="collapse navbar-collapse" id="menu01">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -67,7 +68,7 @@
         </ul>
       </div>
     </nav>
-  </div>
+ 
 
   <!-- home cover -->
   <div class="container">
